[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Scenes/Battle/BattleMain.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/Battle/BattleEntities.gd" type="Script" id=2]
[ext_resource path="res://src/Scenes/Battle/Hex/Hex.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scenes/Battle/unit/Unit.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Scenes/Battle/BattleTurn.gd" type="Script" id=5]
[ext_resource path="res://src/Scenes/Battle/BattleView.gd" type="Script" id=6]
[ext_resource path="res://src/Scenes/Battle/Hex/HexView.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Scenes/Battle/unit/UnitView.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Scenes/Battle/BattleUI.gd" type="Script" id=9]
[ext_resource path="res://src/Scenes/Battle/Hex/HexButtonArea.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Scenes/Battle/ui_component/ActionButton.tscn" type="PackedScene" id=11]

[node name="BattleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="BattleEntities" type="Node" parent="."]
script = ExtResource( 2 )
hex_ref = ExtResource( 3 )
unit_ref = ExtResource( 4 )

[node name="hexes" type="Node" parent="BattleEntities"]

[node name="units" type="Node" parent="BattleEntities"]

[node name="BattleTurn" type="Node" parent="."]
script = ExtResource( 5 )

[node name="BattleView" type="Node2D" parent="."]
script = ExtResource( 6 )
hexView_ref = ExtResource( 7 )
unitView_ref = ExtResource( 8 )

[node name="bg" type="TileMap" parent="BattleView"]
visible = false
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 13, 0, 1, 14, 0, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 11, 14, 0, 12, 14, 0, 13, 14, 0, 14, 15, 0, 15, 13, 0, 16, 14, 0, 17, 14, 0, 18, 14, 0, 19, 14, 0, 20, 14, 0, 21, 14, 0, 22, 14, 0, 23, 14, 0, 24, 14, 0, 25, 14, 0, 26, 14, 0, 27, 14, 0, 28, 14, 0, 29, 15, 0, 65536, 18, 0, 65537, 8, 0, 65538, 24, 0, 65539, 24, 0, 65540, 24, 0, 65541, 24, 0, 65542, 24, 0, 65543, 24, 0, 65544, 24, 0, 65545, 24, 0, 65546, 24, 0, 65547, 24, 0, 65548, 24, 0, 65549, 24, 0, 65550, 25, 0, 65551, 23, 0, 65552, 24, 0, 65553, 24, 0, 65554, 24, 0, 65555, 24, 0, 65556, 24, 0, 65557, 24, 0, 65558, 24, 0, 65559, 24, 0, 65560, 24, 0, 65561, 24, 0, 65562, 24, 0, 65563, 24, 0, 65564, 12, 0, 65565, 20, 0, 131072, 18, 0, 131073, 20, 0, 131074, 0, 0, 131075, 14, 0, 131076, 14, 0, 131077, 14, 0, 131078, 14, 0, 131079, 14, 0, 131080, 14, 0, 131081, 14, 0, 131082, 14, 0, 131083, 14, 0, 131084, 14, 0, 131085, 14, 0, 131086, 14, 0, 131087, 14, 0, 131088, 14, 0, 131089, 14, 0, 131090, 14, 0, 131091, 14, 0, 131092, 14, 0, 131093, 14, 0, 131094, 14, 0, 131095, 14, 0, 131096, 14, 0, 131097, 14, 0, 131098, 14, 0, 131099, 15, 0, 131100, 18, 0, 131101, 20, 0, 196608, 18, 0, 196609, 20, 0, 196610, 18, 0, 196611, 19, 0, 196612, 19, 0, 196613, 19, 0, 196614, 19, 0, 196615, 19, 0, 196616, 19, 0, 196617, 19, 0, 196618, 19, 0, 196619, 19, 0, 196620, 19, 0, 196621, 19, 0, 196622, 19, 0, 196623, 19, 0, 196624, 19, 0, 196625, 19, 0, 196626, 19, 0, 196627, 19, 0, 196628, 19, 0, 196629, 19, 0, 196630, 19, 0, 196631, 19, 0, 196632, 19, 0, 196633, 19, 0, 196634, 19, 0, 196635, 20, 0, 196636, 18, 0, 196637, 20, 0, 262144, 18, 0, 262145, 20, 0, 262146, 18, 0, 262147, 19, 0, 262148, 19, 0, 262149, 19, 0, 262150, 19, 0, 262151, 19, 0, 262152, 19, 0, 262153, 19, 0, 262154, 19, 0, 262155, 19, 0, 262156, 19, 0, 262157, 19, 0, 262158, 19, 0, 262159, 19, 0, 262160, 19, 0, 262161, 19, 0, 262162, 19, 0, 262163, 19, 0, 262164, 19, 0, 262165, 19, 0, 262166, 19, 0, 262167, 19, 0, 262168, 19, 0, 262169, 19, 0, 262170, 19, 0, 262171, 20, 0, 262172, 18, 0, 262173, 20, 0, 327680, 18, 0, 327681, 20, 0, 327682, 18, 0, 327683, 19, 0, 327684, 19, 0, 327685, 19, 0, 327686, 19, 0, 327687, 19, 0, 327688, 19, 0, 327689, 19, 0, 327690, 19, 0, 327691, 19, 0, 327692, 19, 0, 327693, 19, 0, 327694, 19, 0, 327695, 19, 0, 327696, 19, 0, 327697, 19, 0, 327698, 19, 0, 327699, 19, 0, 327700, 19, 0, 327701, 19, 0, 327702, 19, 0, 327703, 19, 0, 327704, 19, 0, 327705, 19, 0, 327706, 19, 0, 327707, 20, 0, 327708, 18, 0, 327709, 20, 0, 393216, 18, 0, 393217, 20, 0, 393218, 18, 0, 393219, 19, 0, 393220, 19, 0, 393221, 19, 0, 393222, 19, 0, 393223, 19, 0, 393224, 19, 0, 393225, 19, 0, 393226, 19, 0, 393227, 19, 0, 393228, 19, 0, 393229, 19, 0, 393230, 19, 0, 393231, 19, 0, 393232, 19, 0, 393233, 19, 0, 393234, 19, 0, 393235, 19, 0, 393236, 19, 0, 393237, 19, 0, 393238, 19, 0, 393239, 19, 0, 393240, 19, 0, 393241, 19, 0, 393242, 19, 0, 393243, 20, 0, 393244, 18, 0, 393245, 20, 0, 458752, 23, 0, 458753, 25, 0, 458754, 18, 0, 458755, 19, 0, 458756, 19, 0, 458757, 19, 0, 458758, 19, 0, 458759, 19, 0, 458760, 19, 0, 458761, 19, 0, 458762, 19, 0, 458763, 19, 0, 458764, 19, 0, 458765, 19, 0, 458766, 19, 0, 458767, 19, 0, 458768, 19, 0, 458769, 19, 0, 458770, 19, 0, 458771, 19, 0, 458772, 19, 0, 458773, 19, 0, 458774, 19, 0, 458775, 19, 0, 458776, 19, 0, 458777, 19, 0, 458778, 19, 0, 458779, 20, 0, 458780, 23, 0, 458781, 25, 0, 524288, 13, 0, 524289, 15, 0, 524290, 18, 0, 524291, 19, 0, 524292, 19, 0, 524293, 19, 0, 524294, 19, 0, 524295, 19, 0, 524296, 19, 0, 524297, 19, 0, 524298, 19, 0, 524299, 19, 0, 524300, 19, 0, 524301, 19, 0, 524302, 19, 0, 524303, 19, 0, 524304, 19, 0, 524305, 19, 0, 524306, 19, 0, 524307, 19, 0, 524308, 19, 0, 524309, 19, 0, 524310, 19, 0, 524311, 19, 0, 524312, 19, 0, 524313, 19, 0, 524314, 19, 0, 524315, 20, 0, 524316, 0, 0, 524317, 15, 0, 589824, 18, 0, 589825, 20, 0, 589826, 18, 0, 589827, 19, 0, 589828, 19, 0, 589829, 19, 0, 589830, 19, 0, 589831, 19, 0, 589832, 19, 0, 589833, 19, 0, 589834, 19, 0, 589835, 19, 0, 589836, 19, 0, 589837, 19, 0, 589838, 19, 0, 589839, 19, 0, 589840, 19, 0, 589841, 19, 0, 589842, 19, 0, 589843, 19, 0, 589844, 19, 0, 589845, 19, 0, 589846, 19, 0, 589847, 19, 0, 589848, 19, 0, 589849, 19, 0, 589850, 19, 0, 589851, 20, 0, 589852, 18, 0, 589853, 20, 0, 655360, 18, 0, 655361, 20, 0, 655362, 18, 0, 655363, 19, 0, 655364, 19, 0, 655365, 19, 0, 655366, 19, 0, 655367, 19, 0, 655368, 19, 0, 655369, 19, 0, 655370, 19, 0, 655371, 19, 0, 655372, 19, 0, 655373, 19, 0, 655374, 19, 0, 655375, 19, 0, 655376, 19, 0, 655377, 19, 0, 655378, 19, 0, 655379, 19, 0, 655380, 19, 0, 655381, 19, 0, 655382, 19, 0, 655383, 19, 0, 655384, 19, 0, 655385, 19, 0, 655386, 19, 0, 655387, 20, 0, 655388, 18, 0, 655389, 20, 0, 720896, 18, 0, 720897, 20, 0, 720898, 18, 0, 720899, 19, 0, 720900, 19, 0, 720901, 19, 0, 720902, 19, 0, 720903, 19, 0, 720904, 19, 0, 720905, 19, 0, 720906, 19, 0, 720907, 19, 0, 720908, 19, 0, 720909, 19, 0, 720910, 19, 0, 720911, 19, 0, 720912, 19, 0, 720913, 19, 0, 720914, 19, 0, 720915, 19, 0, 720916, 19, 0, 720917, 19, 0, 720918, 19, 0, 720919, 19, 0, 720920, 19, 0, 720921, 19, 0, 720922, 19, 0, 720923, 20, 0, 720924, 18, 0, 720925, 20, 0, 786432, 18, 0, 786433, 20, 0, 786434, 18, 0, 786435, 19, 0, 786436, 19, 0, 786437, 19, 0, 786438, 19, 0, 786439, 19, 0, 786440, 19, 0, 786441, 19, 0, 786442, 19, 0, 786443, 19, 0, 786444, 19, 0, 786445, 19, 0, 786446, 19, 0, 786447, 19, 0, 786448, 19, 0, 786449, 19, 0, 786450, 19, 0, 786451, 19, 0, 786452, 19, 0, 786453, 19, 0, 786454, 19, 0, 786455, 19, 0, 786456, 19, 0, 786457, 19, 0, 786458, 19, 0, 786459, 20, 0, 786460, 18, 0, 786461, 20, 0, 851968, 18, 0, 851969, 20, 0, 851970, 23, 0, 851971, 24, 0, 851972, 24, 0, 851973, 24, 0, 851974, 24, 0, 851975, 24, 0, 851976, 24, 0, 851977, 24, 0, 851978, 24, 0, 851979, 24, 0, 851980, 24, 0, 851981, 24, 0, 851982, 24, 0, 851983, 24, 0, 851984, 24, 0, 851985, 24, 0, 851986, 24, 0, 851987, 24, 0, 851988, 24, 0, 851989, 24, 0, 851990, 24, 0, 851991, 24, 0, 851992, 24, 0, 851993, 24, 0, 851994, 24, 0, 851995, 25, 0, 851996, 18, 0, 851997, 20, 0, 917504, 18, 0, 917505, 10, 0, 917506, 14, 0, 917507, 14, 0, 917508, 14, 0, 917509, 14, 0, 917510, 14, 0, 917511, 14, 0, 917512, 14, 0, 917513, 14, 0, 917514, 14, 0, 917515, 14, 0, 917516, 14, 0, 917517, 14, 0, 917518, 15, 0, 917519, 13, 0, 917520, 14, 0, 917521, 14, 0, 917522, 14, 0, 917523, 14, 0, 917524, 14, 0, 917525, 14, 0, 917526, 14, 0, 917527, 14, 0, 917528, 14, 0, 917529, 14, 0, 917530, 14, 0, 917531, 14, 0, 917532, 11, 0, 917533, 20, 0, 983040, 23, 0, 983041, 24, 0, 983042, 24, 0, 983043, 24, 0, 983044, 24, 0, 983045, 24, 0, 983046, 24, 0, 983047, 24, 0, 983048, 24, 0, 983049, 24, 0, 983050, 24, 0, 983051, 24, 0, 983052, 24, 0, 983053, 24, 0, 983054, 25, 0, 983055, 23, 0, 983056, 24, 0, 983057, 24, 0, 983058, 24, 0, 983059, 24, 0, 983060, 24, 0, 983061, 24, 0, 983062, 24, 0, 983063, 24, 0, 983064, 24, 0, 983065, 24, 0, 983066, 24, 0, 983067, 24, 0, 983068, 24, 0, 983069, 25, 0 )

[node name="hexes" type="YSort" parent="BattleView"]
__meta__ = {
"_edit_lock_": true
}

[node name="units" type="YSort" parent="BattleView"]
__meta__ = {
"_edit_lock_": true
}

[node name="BattleUI" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 9 )
hexButtonArea_ref = ExtResource( 10 )
actionButton_ref = ExtResource( 11 )

[node name="hexes_areas" type="Control" parent="BattleUI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="move_container" type="Panel" parent="BattleUI"]
margin_top = 160.0
margin_right = 320.0
margin_bottom = 240.0

[node name="actions" type="HBoxContainer" parent="BattleUI/move_container"]
margin_left = 40.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 40.0

[node name="units" type="HBoxContainer" parent="BattleUI/move_container"]
margin_left = 168.0
margin_top = 16.0
margin_right = 296.0
margin_bottom = 40.0

[node name="end_turn" type="Button" parent="BattleUI"]
margin_left = 240.0
margin_top = 208.0
margin_right = 307.0
margin_bottom = 228.0
text = "End Turn"
[connection signal="pressed" from="BattleUI/end_turn" to="BattleTurn" method="_on_end_turn_pressed"]
